# src/middleware/validateTask.js
@@ -1,4 +1,4 @@
-import { body } from 'express-validator';
+import { body, query } from 'express-validator';
 import { checkValidationResults } from './handleValidationErrors.js';
 
 export const validateTask = [
@@ -14,6 +14,15 @@ export const validateTask = [
   body('completed')
     .optional()
     .isBoolean()
+    .withMessage('completed must be true or false'),
+
+  checkValidationResults,
+];
+
+export const validateCompletedQuery = [
+  query('completed')
+    .optional()
+    .isIn(['true', 'false'])
     .withMessage('completed must be true or false'),
 
   checkValidationResults,
